--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -1,4 +1,4 @@
-extends ../main
+extends ../template
 
 include ../../components/text-field/text-field.pug
 include ../../components/masked-text-field/masked-text-field.pug
@@ -21,14 +21,6 @@ include ../../components/review/review
 include ../../components/card-room/card-room
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
-  link(rel='mask-icon' href='assets/favicons/safari-pinned-tab.svg' color='#5bbad5')
-  meta(name='msapplication-TileColor' content='#da532c')
-  meta(name='theme-color' content='#ffffff')
-  
 block content
   svg.logo.logo_gray(aria-label="toxin-logo")
     use(xlink:href="#logo-gray")
@@ -76,7 +68,6 @@ block content
                   "Шампунь",
                 ]
                })
-
             .col
               +checkbox-buttons({
                 title: "checkbox buttons",
@@ -157,6 +148,3 @@ block content
                   text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. \nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.",
                   like: 11
                 })
-
-block script
-  script
