--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,4 +1,4 @@
-extends ../main
+extends ../template
 
 include ../../components/text-field/text-field.pug
 include ../../components/masked-text-field/masked-text-field.pug
@@ -17,15 +17,6 @@ include ../../components/card-sign-in/card-sign-in
 include ../../components/card-room/card-room
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
-  link(rel='mask-icon' href='assets/favicons/safari-pinned-tab.svg' color='#5bbad5')
-  meta(name='msapplication-TileColor' content='#da532c')
-  meta(name='theme-color' content='#ffffff')
-
-
 block content
   svg.logo.logo_grey(aria-label="toxin logo")
     use(xlink:href="#logo-gray")
@@ -76,8 +67,3 @@ block content
             reviews: 145,
             rate: 1
           })
-        
-        
-        
-block script
-  script
