--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -1,4 +1,4 @@
-extends ../main
+extends ../template
 
 include ../../components/header/header
 include ../../components/footer/footer
@@ -13,14 +13,6 @@ include ../../components/like-button/like-button
 include ../../components/bullet-list/bullet-list
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
-  link(rel='mask-icon' href='assets/favicons/safari-pinned-tab.svg' color='#5bbad5')
-  meta(name='msapplication-TileColor' content='#da532c')
-  meta(name='theme-color' content='#ffffff')
-
 block content
   +header({routes: [
             {
@@ -153,7 +145,4 @@ block content
                 discount: "2 179",
                 taxes: ["1 000", "300"]
               })
-
-
-
   +footer()
