--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,20 +1,21 @@
 extends ../template
 
-include ../../components/text-field/text-field.pug
-include ../../components/masked-text-field/masked-text-field.pug
-include ../../components/dropdown-choose/dropdown-choose.pug
-include ../../components/date-dropdown/date-dropdown.pug
-include ../../components/filter-date/filter-date.pug
-include ../../components/subscription/subscription.pug
-include ../../components/radio-buttons/radio-buttons.pug
-include ../../components/toggle-buttons/toggle-buttons.pug
-include ../../components/like-button/like-button
-include ../../components/rate-buttons/rate-buttons
-include ../../components/card-selection/card-selection
-include ../../components/card-book/card-book
-include ../../components/card-check-in/card-check-in
-include ../../components/card-sign-in/card-sign-in
-include ../../components/card-room/card-room
+include ~components/text-field/text-field.pug
+include ~components/masked-text-field/masked-text-field.pug
+include ~components/dropdown-choose/dropdown-choose.pug
+include ~components/date-dropdown/date-dropdown.pug
+include ~components/filter-date/filter-date.pug
+include ~components/subscription/subscription.pug
+include ~components/radio-buttons/radio-buttons.pug
+include ~components/toggle-buttons/toggle-buttons.pug
+include ~components/like-button/like-button
+include ~components/checkbox/checkbox
+include ~components/rate/rate
+include ~components/card-selection/card-selection
+include ~components/card-book/card-book
+include ~components/card-check-in/card-check-in
+include ~components/card-sign-in/card-sign-in
+include ~components/card-room/card-room
 
 block head
 block content
