--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -19,8 +19,8 @@
 @import '~components/text-field/text-field';
 @import '~components/subscription/subscription';
 @import '~components/card-room/card-room';
-@import '~components/rate-buttons/rate-buttons';
-@import '~components/toggle-buttons/toggle-buttons';
+@import '~components/rate/rate';
+@import '~components/checkbox/checkbox';
 
 .cards-page {
   width: 100%;
