--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -1,11 +1,11 @@
 extends ../template
 
-include ../../components/header/header
-include ../../components/footer/footer
-include ../../components/subscription/subscription
-include ../../components/card-selection/card-selection
-include ../../components/date-dropdown/date-dropdown
-include ../../components/dropdown-choose/dropdown-choose
+include ~components/header/header
+include ~components/footer/footer
+include ~components/subscription/subscription
+include ~components/card-selection/card-selection
+include ~components/date-dropdown/date-dropdown
+include ~components/dropdown-choose/dropdown-choose
 
 block head
 block content
