--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,15 +1,15 @@
 extends ../template
 
-include ../../components/header/header
-include ../../components/footer/footer
-include ../../components/masked-text-field/masked-text-field
-include ../../components/toggle-buttons/toggle-buttons
-include ../../components/subscription/subscription
-include ../../components/text-field/text-field
-include ../../components/radio-buttons/radio-buttons
-include ../../components/card-check-in/card-check-in
-include ../../components/date-dropdown/date-dropdown
-include ../../components/dropdown-choose/dropdown-choose
+include ~components/header/header
+include ~components/footer/footer
+include ~components/masked-text-field/masked-text-field
+include ~components/toggle-buttons/toggle-buttons
+include ~components/subscription/subscription
+include ~components/text-field/text-field
+include ~components/checkbox/checkbox
+include ~components/card-check-in/card-check-in
+include ~components/date-dropdown/date-dropdown
+include ~components/dropdown-choose/dropdown-choose
 
 block head
 block content
