--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -1,13 +1,13 @@
 extends ../template
 
-include ../../components/header/header
-include ../../components/footer/footer
-include ../../components/subscription/subscription
-include ../../components/text-field/text-field
-include ../../components/radio-buttons/radio-buttons
-include ../../components/card-sign-in/card-sign-in
-include ../../components/date-dropdown/date-dropdown
-include ../../components/dropdown-choose/dropdown-choose
+include ~components/header/header
+include ~components/footer/footer
+include ~components/subscription/subscription
+include ~components/text-field/text-field
+include ~components/radio-buttons/radio-buttons
+include ~components/card-sign-in/card-sign-in
+include ~components/date-dropdown/date-dropdown
+include ~components/dropdown-choose/dropdown-choose
 
 block head
 block content
