--- a/src/components/card-check-in/card-check-in.pug
+++ b/src/components/card-check-in/card-check-in.pug
@@ -28,7 +28,14 @@ mixin card-check-in()
                     }
                   )
         .card-check-in__gender
-          +radio-buttons({title: ""})
+          +checkbox({type: 'switchable', items: [{
+            title: 'Мужчина',
+            checked: true
+          },
+          {
+            title: 'Женщина',
+          }
+          ]})
         .card-check-in__birthday
           +masked-text-field(
                   {
@@ -59,7 +66,7 @@ mixin card-check-in()
                   }
                 )
         .card-check-in__offer
-          +toggle-buttons({title: ""})
+          +checkbox({type: 'oval', items: ['Получать спецпредложения']})
         .card-check-in__button
           button(type="submit").button.button_big.button_with-icon Зарегистрироваться
         .card-check-in__sign-in 
