--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -9,12 +9,10 @@
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/datepicker/datepicker';
-@import '~components/rich-list/rich-list';
 @import '~components/card-room/card-room';
-@import '~components/rate-buttons/rate-buttons';
+@import '~components/rate/rate';
 @import '~components/range-slider/range-slider';
-@import '~components/checkbox-buttons/checkbox-buttons';
-@import '~components/expand-list/expand-list';
+@import '~components/checkbox/checkbox';
 @import '~components/pagination/pagination';
 
 .filter {
