--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -9,13 +9,11 @@
 @import '~components/date-dropdown/date-dropdown';
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
-@import '~components/expand-list/expand-list';
-@import '~components/checkbox-buttons/checkbox-buttons';
+@import '~components/checkbox/checkbox';
 @import '~components/radio-buttons/radio-buttons';
 @import '~components/toggle-buttons/toggle-buttons';
 @import '~components/like-button/like-button';
-@import '~components/rate-buttons/rate-buttons';
-@import '~components/rich-list/rich-list';
+@import '~components/rate/rate';
 @import '~components/review/review';
 @import '~components/pagination/pagination';
 @import '~components/bullet-list/bullet-list';
