--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -1,9 +1,9 @@
 extends ../template
 
-include ../../components/text-field/text-field
-include ../../components/subscription/subscription
-include ../../components/header/header
-include ../../components/footer/footer
+include ~components/text-field/text-field
+include ~components/subscription/subscription
+include ~components/header/header
+include ~components/footer/footer
 
 block head
 block content
