--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,5 +1,5 @@
 mixin like-button({count})
-  button.like-button.js-like-button
+  button(type="button").like-button.js-like-button
     svg.like-button__like.js-like-button__like
       use(xlink:href="#like-not-active")
     svg.like-button__like-favorite.js-like-button__like-favorite
