--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,4 +1,5 @@
 mixin pagination()
-  .pagination-wrap
-    .js-pagination.pagination
-    span.pagination-wrap__text 1 – 12 из 100+ вариантов аренды
+  .pagination
+    .js-pagination__container.pagination__container
+    span.pagination__text
+      | 1 – 12 из 100+ вариантов аренды
