--- a/src/components/rate/rate.pug
+++ b/src/components/rate/rate.pug
@@ -4,9 +4,9 @@ mixin rate({rate})
       if val > rate
         .rate__star
           svg.rate__svg
-            use(xlink:href="#star_border").rate__star
+            use(xlink:href="#star_border")
       else 
         .rate__star
           svg.rate__svg
-            use(xlink:href="#star").rate__star
+            use(xlink:href="#star")
       
