--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -1,7 +1,7 @@
-mixin review({src: path, name, date, text, like})
+mixin review({src: path, name, date, text, like, alt})
   .review
     .review__head
-      img.review__avatar(src=require("./" + path).default alt="guest")
+      img.review__avatar(src=require("./" + path).default alt=alt)
       .review__head-text
         .review__name #{name}
         .review__date #{date}
