--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -12,6 +12,8 @@ include ~components/date-dropdown/date-dropdown
 include ~components/dropdown-choose/dropdown-choose
 
 block head
+  meta(name="description" content="Отель, регистрация в сервисе Toxin")
+  meta(name="keywords" content="Отель, регистрация")
 block content
   +header({routes: [
             {
