--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -215,7 +215,7 @@
     }
   }
 
-  &__aside {
+  &__booking {
     @media (max-width: $sm-desktop-width) {
       display: flex;
       justify-content: center;
