--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -10,6 +10,8 @@ include ~components/date-dropdown/date-dropdown
 include ~components/dropdown-choose/dropdown-choose
 
 block head
+  meta(name="description" content="Отель, авторизация в сервисе Toxin")
+  meta(name="keywords" content="Отель, Toxin, вход в аккаунт, вход в личный кабинет, авторизация")
 block content
   +header({routes: [
             {
