--- a/src/components/card-book/card-book.scss
+++ b/src/components/card-book/card-book.scss
@@ -17,7 +17,7 @@
     }
   }
 
-  &__head {
+  &__info {
     margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
@@ -40,7 +40,7 @@
     }
   }
 
-  &__number {
+  &__room-number {
     max-width: 50%;
     font-size: 14px;
     overflow-wrap: break-word;
@@ -50,7 +50,7 @@
     }
   }
 
-  &__head-num {
+  &__num-sign {
     margin-right: 7px;
     font-size: 24px;
     line-height: 30px;
@@ -73,7 +73,7 @@
     }
   }
 
-  &__head-price {
+  &__price-wrapper {
     display: inline-block;
     max-width: 50%;
     font-family: $font-family-primary;
@@ -88,7 +88,7 @@
     }
   }
 
-  &__head-sum {
+  &__price {
     font-family: $font-family-primary;
     font-size: 14px;
     font-weight: $bold;
