--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -89,8 +89,7 @@
       height: 100%;
       opacity: 0;
       content: '';
-      box-shadow:
-        -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
+      box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
         50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
       transition: $tr-fast;
     }
@@ -104,7 +103,7 @@
     padding: 23px 16px 19px 20px;
   }
 
-  &__head {
+  &__room-info {
     margin-bottom: 15px;
     margin-bottom: 6px;
     padding-bottom: 12px;
@@ -117,16 +116,15 @@
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
   }
 
-  &__number {
+  &__number-wrapper {
     font-size: 14px;
   }
 
-  &__head-num {
+  &__number {
     margin-right: 8px;
     display: inline-block;
     font-size: 19px;
     line-height: 17px;
-
     @media (max-width: $phone-width) {
       font-size: 14px;
       line-height: 18px;
@@ -144,7 +142,7 @@
     }
   }
 
-  &__head-price {
+  &__room-price {
     font-family: $font-family-primary;
     font-size: 12px;
     line-height: 18px;
@@ -156,7 +154,7 @@
     }
   }
 
-  &__head-sum {
+  &__price {
     font-family: $font-family-primary;
     font-size: 14px;
     font-weight: $bold;
