--- a/src/components/circle-diagram/circle-diagram.scss
+++ b/src/components/circle-diagram/circle-diagram.scss
@@ -40,12 +40,12 @@
     text-align: center;
     white-space: pre-wrap;
     color: $primary-color;
+  }
 
-    i {
-      font-size: 24px;
-      line-height: 29px;
-      font-style: normal;
-    }
+  &__num {
+    font-size: 24px;
+    line-height: 29px;
+    font-style: normal;
   }
 
   &__list {
