--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,6 +1,8 @@
 extends ../template
 
 block head
+  meta(name="description" content="Отель, поиск номеров")
+  meta(name="keywords" content="отель, поиск номеров, отдых, комнаты")
 block content
   .container
     ul(class="index__list")
