moved radio to radio component from checkbox component #36

--- a/src/components/card-check-in/card-check-in.pug
+++ b/src/components/card-check-in/card-check-in.pug
@@ -28,7 +28,7 @@ mixin card-check-in()
                     }
                   )
         .card-check-in__gender
-          +checkbox({type: 'switchable', items: [{
+          +radio({ items: [{
             title: 'Мужчина',
             checked: true
           },
