--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -20,6 +20,7 @@
 @import '~components/subscription/subscription';
 @import '~components/card-room/card-room';
 @import '~components/rate/rate';
+@import '~components/radio/radio';
 @import '~components/checkbox/checkbox';
 
 .cards-page {
