--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -7,6 +7,7 @@ include ~components/date-dropdown/date-dropdown.pug
 include ~components/filter-date/filter-date.pug
 include ~components/subscription/subscription.pug
 include ~components/checkbox/checkbox.pug
+include ~components/radio/radio.pug
 include ~components/radio-buttons/radio-buttons.pug
 include ~components/toggle-buttons/toggle-buttons.pug
 include ~components/like-button/like-button
@@ -76,7 +77,7 @@ block content
                 ]
                 })
               span.block-title.block-title_margin-b-16 radio button
-              +checkbox({type: 'switchable', items: [{
+              +radio({items: [{
                   title: 'Мужчина',
                   checked: true
                 },
