--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -5,6 +5,7 @@
 @import '~components/text-field/text-field';
 @import '~components/toggle-buttons/toggle-buttons';
 @import '~components/checkbox/checkbox';
+@import '~components/radio/radio';
 @import '~components/masked-text-field/masked-text-field';
 
 .registration {
