--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -89,7 +89,8 @@
       height: 100%;
       opacity: 0;
       content: '';
-      box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
+      box-shadow:
+        -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
         50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
       transition: $tr-fast;
     }
@@ -125,6 +126,7 @@
     display: inline-block;
     font-size: 19px;
     line-height: 17px;
+
     @media (max-width: $phone-width) {
       font-size: 14px;
       line-height: 18px;
