--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -11,6 +11,7 @@ include ~components/toggle-buttons/toggle-buttons.pug
 include ~components/like-button/like-button
 include ~components/checkbox/checkbox
 include ~components/rate/rate
+include ~components/radio/radio
 include ~components/card-selection/card-selection
 include ~components/card-book/card-book
 include ~components/card-check-in/card-check-in
