--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -10,7 +10,7 @@
 @import '~components/filter-date/filter-date';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/checkbox/checkbox';
-@import '~components/radio-buttons/radio-buttons';
+@import '~components/radio/radio';
 @import '~components/toggle-buttons/toggle-buttons';
 @import '~components/like-button/like-button';
 @import '~components/rate/rate';
