--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -7,6 +7,7 @@ include ~components/toggle-buttons/toggle-buttons
 include ~components/subscription/subscription
 include ~components/text-field/text-field
 include ~components/checkbox/checkbox
+include ~components/radio/radio
 include ~components/card-check-in/card-check-in
 include ~components/date-dropdown/date-dropdown
 include ~components/dropdown-choose/dropdown-choose
