changed modificator's name #36

--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -12,7 +12,7 @@ mixin checkbox({title, items, type})
             span.checkbox__custom-checkbox(tabindex="0")
             span.checkbox__text
               | #{val}
-    if type === 'described'
+    if type === 'detailed'
       .checkbox__title-wrap
         if title
           span.checkbox__title #{title}
