--- a/src/pages/filter/filter.pug
+++ b/src/pages/filter/filter.pug
@@ -75,7 +75,7 @@ block content
               .filter__availability
                 +checkbox({
                   title: "Доступность",
-                  type: "described",
+                  type: "detailed",
                   items: [
                     {
                       title: "Широкий коридор",
