--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -103,7 +103,7 @@ block content
                     description: "На 1 этаже вас встретит специалист  и проводит до номера."
                   }
                 ],
-                type: "described"
+                type: "detailed"
               })
             .col
               +range-slider({title: "range slider", interval: "5000₽ - 10000₽"})
