deleted block tag from inline parent element #36

--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -25,7 +25,7 @@ mixin checkbox({title, items, type})
               span.checkbox__text
                 span.checkbox__text-title #{val.title}
                 br
-                p.checkbox__description
+                span.checkbox__description
                   | #{val.description}
     if type === 'dropping-out'
       details.checkbox__dropdown
