--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -83,7 +83,7 @@
     }
 
     #{$self}__item {
-      margin-bottom: 10px;
+      margin-bottom: 7px;
 
       &:last-child {
         margin-bottom: 0;
@@ -128,6 +128,7 @@
     }
 
     #{$self}__description {
+      display: inline-block;
       font-size: 12px;
       line-height: 14px;
       white-space: pre-wrap;
