added meta keyword and description for landing.pug #36

--- a/src/pages/filter/filter.pug
+++ b/src/pages/filter/filter.pug
@@ -14,6 +14,7 @@ include ~components/card-room/card-room
 include ~components/rate/rate
 include ~components/pagination/pagination
 block head
+  title Фильтр комнат | Toxin
   meta(name="description" content="Отель, поиск и подбор номеров с дополнительные опциями")
   meta(name="keywords" content="Отель, номера с детскими кроватками, номера с питомцами, номера где можно курить")
 block content
