--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -8,6 +8,9 @@ include ~components/date-dropdown/date-dropdown
 include ~components/dropdown-choose/dropdown-choose
 
 block head
+  title Главная | Toxin
+  meta(name="description", content="Отель, поиск номеров")
+  meta(name="keywords" content="отель, бронирование, комнаты, отдых")
 block content
   +header({routes: [
             {
