--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -13,6 +13,7 @@ include ~components/date-dropdown/date-dropdown
 include ~components/dropdown-choose/dropdown-choose
 
 block head
+  title Регистрация | Toxin
   meta(name="description" content="Отель, регистрация в сервисе Toxin")
   meta(name="keywords" content="Отель, регистрация")
 block content
