--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -13,6 +13,7 @@ include ~components/like-button/like-button
 include ~components/bullet-list/bullet-list
 
 block head
+  title Детали комнаты | Toxin
   meta(name="description" content="Отель, подробная информация о комнате в отеле")
   meta(name="keywords" content="Отель, удобства номера, отзывы номера, расчет стоимости номера в отеле, бронирование номера")
 block content
