--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -49,10 +49,10 @@ block content
   .content
     .room-details
       .room-details__room-photos
-        img(src=require("./images/room-d-1.jpg").default alt="Комната в отеле" class="room-details__main-photo room-details__photo")
+        img(src=require("./images/room-d-1.jpg").default alt="Спальня" class="room-details__main-photo room-details__photo")
         .room-details__another-photos
-          img(src=require("./images/room-d-2.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
-          img(src=require("./images/room-d-3.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
+          img(src=require("./images/room-d-2.jpg").default alt="Детская спальня" class="room-details__another-photo room-details__photo")
+          img(src=require("./images/room-d-3.jpg").default alt="Гостиная " class="room-details__another-photo room-details__photo")
       .room-details__text-content
         .room-details__container
           main.room-details__main 
