--- a/src/components/subscription/subscription.pug
+++ b/src/components/subscription/subscription.pug
@@ -10,6 +10,6 @@ mixin subscription({title,placeholder, required})
 				pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
 				required=required
 			)
-			button(type="button").subscription__button
+			button(type="submit").subscription__button
 
 
