changed reset.scss to normalize.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 @import '~utils/utils-scss/vars.scss';
-@import '~utils/utils-scss/reset.scss';
+@import '~utils/utils-scss/normalize.scss';
 @import '~utils/utils-scss/fonts.scss';
 @import '~utils/utils-scss/button.scss';
 @import '~utils/utils-scss/mixins.scss';
